manifests/v1beta1/components/ui/ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-ui
  namespace: kubeflow
  labels:
    katib.kubeflow.org/component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      katib.kubeflow.org/component: ui
  template:
    metadata:
      labels:
        katib.kubeflow.org/component: ui
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: katib-ui
          image: docker.io/kubeflowkatib/katib-ui
          command:
            - "./katib-ui"
          args:
            - "--port=8080"
          ports:
            - name: ui
              containerPort: 8080
          resources:
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 2Gi
            requests:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 2Gi
      serviceAccountName: katib-ui
