manifests/v1beta1/components/ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: katib-ui
  namespace: kubeflow
  labels:
    katib.kubeflow.org/component: ui
  annotations:
    cloud.google.com/backend-config: '{"default": "katib-backend-config"}'
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: ui
      targetPort: 8080
  selector:
    katib.kubeflow.org/component: ui
