manifests/v1beta1/components/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: katib-external-lb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: katib-ui
    networking.gke.io/managed-certificates: katib-managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
                name: katib-ui
                port:
                    number: 8080
